--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap');
+
+body{
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #F7EBEF;
+  transition: 200ms;
+}
+
+h1{
+  font-family: 'Staatliches', cursive;
+  font-size: 5rem;
+  margin: 0;
+}
+
+hr {
+  height: 1.7em;
+  width: 120%;
+  background-color: #FFF;
+  border: none;
+  z-index: -1;
+}
+
+.icon-btn{
+  background: transparent;
+  border:none;
+  outline: none;
+}
+
+header{
   text-align: center;
+  position:relative;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header > hr{
+  position: absolute;
+  top: 2.1em;
+  transform: rotate(-2.5deg);
+  -moz-transform: rotate(-2.5deg);
+  -webkit-transform: rotate(-2.5deg);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.section-break:nth-of-type(odd){
+  transform: rotate(+2.5deg);
+  -moz-transform: rotate(+2.5deg);
+  -webkit-transform: rotate(+2.5deg);
+}
+.section-break:nth-of-type(even){
+  transform: rotate(-2.5deg);
+  -moz-transform: rotate(-2.5deg);
+  -webkit-transform: rotate(-2.5deg);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+main {
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
