--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,15 @@ hr {
   background-color: #FFF;
   border: none;
   z-index: -1;
+  position: relative;
+  top: -0.5em;
 }
 
 .icon-btn{
   background: transparent;
   border:none;
   outline: none;
+  padding: 0;
 }
 
 header{
@@ -56,3 +59,11 @@ main {
   overflow: hidden;
 }
 
+footer{
+  font-size: 0.5em;
+  text-align: center;
+  color:rgba(0, 0, 0, 0,5);
+  margin: 2em 0;
+}
+
+#copyright{text-transform: uppercase;}
