--- a/src/components/camera.css
+++ b/src/components/camera.css
@@ -2,6 +2,7 @@
 display: flex;
 flex-direction: column;
 align-items: center;
+margin: 0;
 }
 
 .cam-elem{
@@ -11,6 +12,7 @@ align-items: center;
 	border: solid 0.5em #FFF;
 	padding:0;
 	margin: 0;
+	position: relative;
 }
 
 video{
@@ -20,13 +22,30 @@ video{
 	padding:0;
 }
 
-.cam-controls-container{
-	display: flex;
-    width: 300px;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+.cam-activate-btn{
+	width: 6em;
+	position: absolute; 
+	left: 0; 
+	right: 0; 
+	top: 0;
+	bottom: 0;
+	margin: auto; 
+	z-index: 1000;
 }
 
-#toggle-cam-btn{}
-#take-pic-btn{}
+#cam-activate-icon{
+	width: 6em;
+}
+
+.cam-controls-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 5fr 1fr 1.5fr;
+    grid-template-rows: 1fr;
+    width: 300px;
+    margin: 0.7em 0;
+    gap: 1em;
+}
+
+#self-timer-btn{
+	grid-column: 5;
+}
