--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,8 +1,45 @@
 #gallery-container{
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+	justify-items: center;
 	height:fit-content;
 	min-height:100px;
+	gap: 1em;
+}
+
+.gallery-item{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	height: auto;
+}
+/* 
+.img-container{
+	width: 150px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	box-shadow: 0px 0px 0px 5px #FFF;
+}
+ */
+
+.gallery-item img{
+	width: 300px;
+	border: 0.5em solid #FFF;
+}
+
+.img-location {
+	text-transform: uppercase;
+	font-size: 0.6em;
+	font-weight: 500;
+	margin: 0 0 0 0.7em;
+	color: rgba(0, 0, 0, 0.6)
 }
 
 .hidden{
 	display: none;
 }
+
