cleaned up and added time to img-details

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -31,7 +31,7 @@
 	border: 0.5em solid #FFF;
 }
 
-.img-location {
+.img-details {
 	text-transform: uppercase;
 	font-size: 0.6em;
 	font-weight: 500;
