--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body{
   transition: 200ms;
 }
 
+
 h1{
   font-family: 'Staatliches', cursive;
   font-size: 5rem;
@@ -20,7 +21,6 @@ hr {
   border: none;
   z-index: -1;
   position: relative;
-  top: -0.5em;
 }
 
 .icon-btn{
@@ -42,6 +42,10 @@ header > hr{
   transform: rotate(-2.5deg);
   -moz-transform: rotate(-2.5deg);
   -webkit-transform: rotate(-2.5deg);
+}
+
+.section-break {
+  margin: 1em 0;
 }
 
 .section-break:nth-of-type(odd){
