--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -25,18 +25,42 @@
 	box-shadow: 0px 0px 0px 5px #FFF;
 }
  */
-
-.gallery-item img{
+.gallery-img{
 	width: 300px;
 	border: 0.5em solid #FFF;
 }
 
+.icon-img{
+
+}
+
 .img-details {
+	margin: 0.5em 0 0 0;
+	width: 100%;
+	display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+	align-items: center;
 	text-transform: uppercase;
-	font-size: 0.6em;
+	font-size: 0.7em;
 	font-weight: 500;
-	margin: 0 0 0 0.7em;
-	color: rgba(0, 0, 0, 0.6)
+	color: rgba(0, 0, 0, 0.6);
+}
+
+.detail-btns{
+	display: flex;
+	width: 6em;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.detail-btns > * {
+	display: flex;
+	align-items: center;
+}
+.detail-btns img{
+	height: 1.5rem;
+	opacity: 0.5;
 }
 
 .hidden{
